# TiDE

./: .gitignore  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  TiDE  aclocal.m4  config.h.in  configure  configure.ac  parameters.txt  tde_lcurve.cpp  tde_lcurve.hpp  tde_lcurve_assistant.cpp  tde_lcurve_assistant.hpp  tde_lcurve_run.cpp
Trapezoidal_rule/: trapezoidal.cpp  trapezoidal.hpp
docs/: parameters.example.txt
docs/tutorials/: FitTiDEpyTutorial.ipynb  GetingStarted.ipynb
m4/: ax_cxx_boost_check_bessel.m4  ax_cxx_check_bessel.m4
python/tidepy/: README.md  pyproject.toml
python/tidepy/src/tidepy/: __init__.py  tide.py
src/: Makefile.am  Makefile.in  tde_lcurve.cpp  tde_lcurve.hpp  tde_lcurve_assistant.cpp  tde_lcurve_assistant.hpp  tde_lcurve_run.cpp  tde_parameters.cpp  tde_parameters.hpp
src/Linear_interpol/: linear_interpol.cpp  linear_interpol.hpp
src/Python_wrapper/: tide_wrapper.cpp  tide_wrapper.h
src/Trapezoidal_rule/: integral_test  main  main.cpp  trapezoidal.cpp  trapezoidal.hpp
src/star_structure/: linear_interpol.hpp
