bin_PROGRAMS = TiDE
TiDE_SOURCES = tde_lcurve_run.cpp tde_lcurve_assistant.cpp tde_lcurve_assistant.hpp tde_lcurve.cpp tde_lcurve.hpp tde_parameters.cpp tde_parameters.hpp star_structure/linear_interpol.cpp star_structure/linear_interpol.hpp Trapezoidal_rule/trapezoidal.cpp Trapezoidal_rule/trapezoidal.hpp
TiDE_CXXFLAGS = -std=c++17 -O2
